fix: "cambio de longs a integer y correciones de enum en historial status"