@@ -3,16 +3,17 @@ package edu.dosw.services;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import edu.dosw.exception.ResourceNotFoundException;
+import edu.dosw.exception.BusinessException;
 import edu.dosw.model.*;
 import edu.dosw.model.enums.HistorialStatus;
 import edu.dosw.services.UserServices.StudentService;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -27,13 +28,7 @@ class PemsumServiceTest {
 
   @Mock private GroupService groupService;
 
-  private PemsumService pemsumService;
-
-  @BeforeEach
-  void setUp() {
-    pemsumService =
-        new PemsumService(facultyService, studentService, historialService, groupService);
-  }
+  @InjectMocks private PemsumService pemsumService;
 
   @Test
   void getPemsum_ShouldCalculateApprovedCreditsCorrectly_WithFINISHEDStatus() {
@@ -44,32 +39,32 @@ class PemsumServiceTest {
     student.setPlan("2024");
     student.setFullName("John Doe");
 
-    Course course1 = new Course("MATH101", "Calculus I", 4);
-    Course course2 = new Course("PHYS101", "Physics I", 3);
-    List<Course> courses = Arrays.asList(course1, course2);
+    List<Course> courses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4),
+                    new Course("PHYS101", "Physics I", 3),
+                    new Course("CHEM101", "Chemistry I", 3));
 
-    Historial historial1 = new Historial();
-    historial1.setGroupCode("MATH101");
-    historial1.setStatus(HistorialStatus.FINISHED);
-
-    Historial historial2 = new Historial();
-    historial2.setGroupCode("PHYS101");
-    historial2.setStatus(HistorialStatus.ON_GOING);
+    List<Historial> historials =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "CHEM101", HistorialStatus.ON_GOING));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024")).thenReturn(courses);
-    when(historialService.getSessionsByCourses(studentId, courses))
-        .thenReturn(Arrays.asList(historial1, historial2));
+    when(historialService.getSessionsByCourses(studentId, courses)).thenReturn(historials);
 
     Pemsum result = pemsumService.getPemsum(studentId);
 
     assertNotNull(result);
-    assertEquals(4, result.getApprovedCredits());
-    assertEquals(7, result.getTotalCredits());
+    assertEquals(7, result.getApprovedCredits());
+    assertEquals(10, result.getTotalCredits());
 
-    Map<Course, HistorialStatus> coursesMap = result.getCourses();
-    assertEquals(HistorialStatus.FINISHED, coursesMap.get(course1));
-    assertEquals(HistorialStatus.ON_GOING, coursesMap.get(course2));
+    Map<Course, String> coursesMap = result.getCourses();
+    assertEquals("FINISHED", coursesMap.get(courses.get(0)));
+    assertEquals("FINISHED", coursesMap.get(courses.get(1)));
+    assertEquals("ON_GOING", coursesMap.get(courses.get(2)));
   }
 
   @Test
@@ -81,32 +76,94 @@ class PemsumServiceTest {
     student.setPlan("2024");
     student.setFullName("Jane Smith");
 
-    Course course1 = new Course("CHEM101", "Chemistry", 3);
-    Course course2 = new Course("BIO101", "Biology", 4);
-    List<Course> courses = Arrays.asList(course1, course2);
+    List<Course> courses =
+            Arrays.asList(
+                    new Course("BIO101", "Biology I", 3), new Course("CHEM101", "Chemistry I", 3));
 
-    Historial historial1 = new Historial();
-    historial1.setGroupCode("CHEM101");
-    historial1.setStatus(HistorialStatus.FAILED);
-
-    Historial historial2 = new Historial();
-    historial2.setGroupCode("BIO101");
-    historial2.setStatus(HistorialStatus.ON_GOING);
+    List<Historial> historials =
+            Arrays.asList(
+                    createHistorial(studentId, "BIO101", HistorialStatus.FAILED),
+                    createHistorial(studentId, "CHEM101", HistorialStatus.CANCELLED));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Science", "2024")).thenReturn(courses);
-    when(historialService.getSessionsByCourses(studentId, courses))
-        .thenReturn(Arrays.asList(historial1, historial2));
+    when(historialService.getSessionsByCourses(studentId, courses)).thenReturn(historials);
 
     Pemsum result = pemsumService.getPemsum(studentId);
 
     assertNotNull(result);
     assertEquals(0, result.getApprovedCredits());
-    assertEquals(7, result.getTotalCredits());
+    assertEquals(6, result.getTotalCredits());
 
-    Map<Course, HistorialStatus> coursesMap = result.getCourses();
-    assertEquals(HistorialStatus.FAILED, coursesMap.get(course1));
-    assertEquals(HistorialStatus.ON_GOING, coursesMap.get(course2));
+    Map<Course, String> coursesMap = result.getCourses();
+    assertEquals("FAILED", coursesMap.get(courses.get(0)));
+    assertEquals("CANCELLED", coursesMap.get(courses.get(1)));
+  }
+
+  @Test
+  void getPemsum_WithMixedStatuses_ShouldCalculateCorrectly() {
+    String studentId = "STU003";
+    Student student = new Student();
+    student.setUserId(studentId);
+    student.setFacultyName("Engineering");
+    student.setPlan("2024");
+    student.setFullName("Bob Wilson");
+
+    List<Course> courses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4),
+                    new Course("PHYS101", "Physics I", 3),
+                    new Course("CS101", "Programming", 3),
+                    new Course("ENG101", "English", 2));
+
+    List<Historial> historials =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101", HistorialStatus.FAILED),
+                    createHistorial(studentId, "CS101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "ENG101", HistorialStatus.SWAPPED));
+
+    when(studentService.getStudentById(studentId)).thenReturn(student);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024")).thenReturn(courses);
+    when(historialService.getSessionsByCourses(studentId, courses)).thenReturn(historials);
+
+    Pemsum result = pemsumService.getPemsum(studentId);
+
+    assertNotNull(result);
+    assertEquals(7, result.getApprovedCredits());
+    assertEquals(12, result.getTotalCredits());
+  }
+
+  @Test
+  void getPemsum_WithAllFINISHEDCourses_ShouldReturnFullCredits() {
+    String studentId = "STU004";
+    Student student = new Student();
+    student.setUserId(studentId);
+    student.setFacultyName("Engineering");
+    student.setPlan("2024");
+    student.setFullName("Alice Brown");
+
+    List<Course> courses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4),
+                    new Course("PHYS101", "Physics I", 3),
+                    new Course("CHEM101", "Chemistry I", 3));
+
+    List<Historial> historials =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "CHEM101", HistorialStatus.FINISHED));
+
+    when(studentService.getStudentById(studentId)).thenReturn(student);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024")).thenReturn(courses);
+    when(historialService.getSessionsByCourses(studentId, courses)).thenReturn(historials);
+
+    Pemsum result = pemsumService.getPemsum(studentId);
+
+    assertNotNull(result);
+    assertEquals(10, result.getApprovedCredits());
+    assertEquals(10, result.getTotalCredits());
   }
 
   @Test
@@ -119,8 +176,8 @@ class PemsumServiceTest {
     student.setFullName("Charlie Davis");
 
     List<Course> courses =
-        Arrays.asList(
-            new Course("MATH101", "Calculus I", 4), new Course("PHYS101", "Physics I", 3));
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4), new Course("PHYS101", "Physics I", 3));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024")).thenReturn(courses);
@@ -132,74 +189,63 @@ class PemsumServiceTest {
     assertEquals(0, result.getApprovedCredits());
     assertEquals(7, result.getTotalCredits());
 
-    Map<Course, HistorialStatus> coursesMap = result.getCourses();
-    assertEquals(HistorialStatus.PENDING, coursesMap.get(courses.get(0)));
-    assertEquals(HistorialStatus.PENDING, coursesMap.get(courses.get(1)));
+    Map<Course, String> coursesMap = result.getCourses();
+    assertEquals("pending", coursesMap.get(courses.get(0)));
+    assertEquals("pending", coursesMap.get(courses.get(1)));
   }
 
-  @Test
-  void getPemsum_WhenFacultyCoursesNotFound_ShouldThrowException() {
-    String studentId = "STU006";
-    Student student = new Student();
-    student.setUserId(studentId);
-    student.setFacultyName("Unknown");
-    student.setPlan("2024");
-
-    when(studentService.getStudentById(studentId)).thenReturn(student);
-    when(facultyService.findCoursesByFacultyNameAndPlan("Unknown", "2024")).thenReturn(List.of());
-
-    assertThrows(ResourceNotFoundException.class, () -> pemsumService.getPemsum(studentId));
-  }
 
   @Test
   void getCompletedCoursesPercentage_ShouldCalculateCorrectPercentage() {
-    String studentId = "STU007";
+    String studentId = "STU006";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Engineering");
     student.setPlan("2024");
 
-    Course course1 = new Course("MATH101", "Calculus I", 4);
-    Course course2 = new Course("PHYS101", "Physics I", 3);
-    Course course3 = new Course("CHEM101", "Chemistry", 3);
-    List<Course> facultyCourses = Arrays.asList(course1, course2, course3);
+    List<Course> allCourses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4),
+                    new Course("PHYS101", "Physics I", 3),
+                    new Course("CHEM101", "Chemistry I", 3),
+                    new Course("CS101", "Programming", 3));
 
-    Historial finishedHistorial = new Historial();
-    finishedHistorial.setGroupCode("MATH101");
-    finishedHistorial.setStatus(HistorialStatus.FINISHED);
-
-    Group mathGroup = new Group();
-    mathGroup.setAbbreviation("MATH101");
+    List<Historial> finishedHistorials =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101-01", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101-02", HistorialStatus.FINISHED));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
-        .thenReturn(facultyCourses);
+            .thenReturn(allCourses);
     when(historialService.getHistorialByStudentIdAndStatus(studentId, HistorialStatus.FINISHED))
-        .thenReturn(List.of(finishedHistorial));
-    when(groupService.getGroupByGroupCode("MATH101")).thenReturn(mathGroup);
+            .thenReturn(finishedHistorials);
+    when(groupService.getGroupByGroupCode("MATH101-01")).thenReturn(createGroup("MATH101-01", "MATH101"));
+    when(groupService.getGroupByGroupCode("PHYS101-02")).thenReturn(createGroup("PHYS101-02", "PHYS101"));
 
     double percentage = pemsumService.getCompletedCoursesPercentage(studentId);
 
-    assertEquals(40.0, percentage, 0.01);
+    assertEquals(53.846, percentage, 0.1);
   }
 
   @Test
-  void getCompletedCoursesPercentage_WhenNoFinishedCourses_ShouldReturnZero() {
-    String studentId = "STU008";
+  void getCompletedCoursesPercentage_WithNoFinishedCourses_ShouldReturnZero() {
+    String studentId = "STU007";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Science");
     student.setPlan("2024");
 
-    Course course1 = new Course("BIO101", "Biology", 4);
-    Course course2 = new Course("CHEM101", "Chemistry", 3);
-    List<Course> facultyCourses = Arrays.asList(course1, course2);
+    List<Course> allCourses =
+            Arrays.asList(
+                    new Course("BIO101", "Biology I", 3), new Course("CHEM101", "Chemistry I", 3));
+
+    List<Historial> finishedHistorials = Collections.emptyList();
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
-    when(facultyService.findCoursesByFacultyNameAndPlan("Science", "2024"))
-        .thenReturn(facultyCourses);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Science", "2024")).thenReturn(allCourses);
     when(historialService.getHistorialByStudentIdAndStatus(studentId, HistorialStatus.FINISHED))
-        .thenReturn(List.of());
+            .thenReturn(finishedHistorials);
 
     double percentage = pemsumService.getCompletedCoursesPercentage(studentId);
 
@@ -207,184 +253,217 @@ class PemsumServiceTest {
   }
 
   @Test
-  void getStudentCoursesStatus_ShouldCombineHistorialAndPendingCourses() {
+  void getCompletedCoursesPercentage_WithAllCoursesFinished_ShouldReturn100() {
+    String studentId = "STU008";
+    Student student = new Student();
+    student.setUserId(studentId);
+    student.setFacultyName("Engineering");
+    student.setPlan("2024");
+
+    List<Course> allCourses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4), new Course("PHYS101", "Physics I", 3));
+
+    List<Historial> finishedHistorials =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101-01", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101-02", HistorialStatus.FINISHED));
+
+    when(studentService.getStudentById(studentId)).thenReturn(student);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
+            .thenReturn(allCourses);
+    when(historialService.getHistorialByStudentIdAndStatus(studentId, HistorialStatus.FINISHED))
+            .thenReturn(finishedHistorials);
+    when(groupService.getGroupByGroupCode("MATH101-01")).thenReturn(createGroup("MATH101-01", "MATH101"));
+    when(groupService.getGroupByGroupCode("PHYS101-02")).thenReturn(createGroup("PHYS101-02", "PHYS101"));
+
+    double percentage = pemsumService.getCompletedCoursesPercentage(studentId);
+
+    assertEquals(100.0, percentage, 0.0);
+  }
+
+  @Test
+  void getCompletedCoursesPercentage_WithNoHistorial_ShouldReturnZero() {
     String studentId = "STU009";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Engineering");
     student.setPlan("2024");
 
-    Course course1 = new Course("MATH101", "Calculus I", 4);
-    Course course2 = new Course("PHYS101", "Physics I", 3);
-    List<Course> facultyCourses = Arrays.asList(course1, course2);
+    List<Course> allCourses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4), new Course("PHYS101", "Physics I", 3));
 
-    Historial historial = new Historial();
-    historial.setGroupCode("MATH101");
-    historial.setStatus(HistorialStatus.FINISHED);
+    List<Historial> finishedHistorials = Collections.emptyList();
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
-        .thenReturn(facultyCourses);
-    when(historialService.getHistorialByStudentId(studentId)).thenReturn(List.of(historial));
+            .thenReturn(allCourses);
+    when(historialService.getHistorialByStudentIdAndStatus(studentId, HistorialStatus.FINISHED))
+            .thenReturn(finishedHistorials);
 
-    Map<String, HistorialStatus> result = pemsumService.getStudentCoursesStatus(studentId);
+    double percentage = pemsumService.getCompletedCoursesPercentage(studentId);
+
+    assertEquals(0.0, percentage, 0.0);
+  }
+
+
+  @Test
+  void getStudentCoursesStatus_ShouldCombineHistorialAndPendingCourses() {
+    String studentId = "STU001";
+    Student student = new Student();
+    student.setUserId(studentId);
+    student.setFacultyName("Engineering");
+    student.setPlan("2024");
+
+    List<Course> facultyCourses =
+            Arrays.asList(
+                    new Course("MATH101", "Calculus I", 4),
+                    new Course("PHYS101", "Physics I", 3),
+                    new Course("CHEM101", "Chemistry I", 3),
+                    new Course("CS101", "Programming", 3));
+
+    List<Historial> studentHistorial =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "PHYS101", HistorialStatus.ON_GOING),
+                    createHistorial(studentId, "CHEM101", HistorialStatus.FAILED));
+
+    when(studentService.getStudentById(studentId)).thenReturn(student);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
+            .thenReturn(facultyCourses);
+    when(historialService.getHistorialByStudentId(studentId)).thenReturn(studentHistorial);
+
+    Map<String, String> result = pemsumService.getStudentCoursesStatus(studentId);
 
     assertNotNull(result);
-    assertEquals(2, result.size());
-    assertEquals(HistorialStatus.FINISHED, result.get("MATH101"));
-    assertEquals(HistorialStatus.PENDING, result.get("PHYS101"));
+    assertEquals(4, result.size());
+    assertEquals("FINISHED", result.get("MATH101"));
+    assertEquals("ON_GOING", result.get("PHYS101"));
+    assertEquals("FAILED", result.get("CHEM101"));
+    assertEquals("PENDING", result.get("CS101"));
   }
 
   @Test
   void getStudentCoursesStatus_ShouldPrioritizeNewStatus_WhenCourseAlreadyExists() {
-    String studentId = "STU010";
+    String studentId = "STU002";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Science");
     student.setPlan("2024");
 
-    Course course = new Course("CHEM101", "Chemistry", 3);
-    List<Course> facultyCourses = List.of(course);
+    List<Course> facultyCourses = Arrays.asList(new Course("BIO101", "Biology I", 3));
 
-    Historial historial1 = new Historial();
-    historial1.setGroupCode("CHEM101");
-    historial1.setStatus(HistorialStatus.ON_GOING);
-
-    Historial historial2 = new Historial();
-    historial2.setGroupCode("CHEM101");
-    historial2.setStatus(HistorialStatus.FINISHED);
+    List<Historial> studentHistorial =
+            Arrays.asList(
+                    createHistorial(studentId, "BIO101", HistorialStatus.FAILED),
+                    createHistorial(studentId, "BIO101", HistorialStatus.ON_GOING));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Science", "2024"))
-        .thenReturn(facultyCourses);
-    when(historialService.getHistorialByStudentId(studentId))
-        .thenReturn(Arrays.asList(historial1, historial2));
+            .thenReturn(facultyCourses);
+    when(historialService.getHistorialByStudentId(studentId)).thenReturn(studentHistorial);
 
-    Map<String, HistorialStatus> result = pemsumService.getStudentCoursesStatus(studentId);
+    Map<String, String> result = pemsumService.getStudentCoursesStatus(studentId);
 
     assertNotNull(result);
     assertEquals(1, result.size());
-    assertEquals(HistorialStatus.FINISHED, result.get("CHEM101"));
+    assertEquals("ON_GOING", result.get("BIO101"));
   }
 
   @Test
   void getStudentCoursesStatus_ShouldNotThrowException_WhenTryingToChangeFinishedCourse() {
-    String studentId = "STU011";
+    String studentId = "STU003";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Engineering");
     student.setPlan("2024");
 
-    Course course = new Course("MATH101", "Calculus I", 4);
-    List<Course> facultyCourses = List.of(course);
+    List<Course> facultyCourses = Arrays.asList(new Course("MATH101", "Calculus I", 4));
 
-    Historial historial1 = new Historial();
-    historial1.setGroupCode("MATH101");
-    historial1.setStatus(HistorialStatus.FINISHED);
-
-    Historial historial2 = new Historial();
-    historial2.setGroupCode("MATH101");
-    historial2.setStatus(HistorialStatus.FAILED);
+    List<Historial> studentHistorial =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED),
+                    createHistorial(studentId, "MATH101", HistorialStatus.FAILED));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
-        .thenReturn(facultyCourses);
-    when(historialService.getHistorialByStudentId(studentId))
-        .thenReturn(Arrays.asList(historial1, historial2));
+            .thenReturn(facultyCourses);
+    when(historialService.getHistorialByStudentId(studentId)).thenReturn(studentHistorial);
 
-    Map<String, HistorialStatus> result = pemsumService.getStudentCoursesStatus(studentId);
+    Map<String, String> result = pemsumService.getStudentCoursesStatus(studentId);
 
     assertNotNull(result);
     assertEquals(1, result.size());
-    assertEquals(HistorialStatus.FINISHED, result.get("MATH101"));
+    assertEquals("FINISHED", result.get("MATH101"));
   }
 
   @Test
   void getStudentCoursesStatus_ShouldAllowSameFinishedStatus_WhenCourseIsAlreadyFinished() {
-    String studentId = "STU012";
+    String studentId = "STU004";
+    Student student = new Student();
+    student.setUserId(studentId);
+    student.setFacultyName("Engineering");
+    student.setPlan("2024");
+
+    List<Course> facultyCourses = Arrays.asList(new Course("MATH101", "Calculus I", 4));
+
+    List<Historial> studentHistorial =
+            Arrays.asList(
+                    createHistorial(studentId, "MATH101", HistorialStatus.ON_GOING),
+                    createHistorial(studentId, "MATH101", HistorialStatus.FINISHED));
+
+    when(studentService.getStudentById(studentId)).thenReturn(student);
+    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
+            .thenReturn(facultyCourses);
+    when(historialService.getHistorialByStudentId(studentId)).thenReturn(studentHistorial);
+
+    Map<String, String> result = pemsumService.getStudentCoursesStatus(studentId);
+
+    assertNotNull(result);
+    assertEquals(1, result.size());
+    assertEquals("FINISHED", result.get("MATH101"));
+  }
+
+  @Test
+  void getStudentCoursesStatus_WithNoHistorial_ShouldReturnAllPending() {
+    String studentId = "STU005";
     Student student = new Student();
     student.setUserId(studentId);
     student.setFacultyName("Science");
     student.setPlan("2024");
 
-    Course course = new Course("BIO101", "Biology", 4);
-    List<Course> facultyCourses = List.of(course);
-
-    Historial historial1 = new Historial();
-    historial1.setGroupCode("BIO101");
-    historial1.setStatus(HistorialStatus.FINISHED);
-
-    Historial historial2 = new Historial();
-    historial2.setGroupCode("BIO101");
-    historial2.setStatus(HistorialStatus.FINISHED);
+    List<Course> facultyCourses =
+            Arrays.asList(
+                    new Course("BIO101", "Biology I", 3), new Course("CHEM101", "Chemistry I", 3));
 
     when(studentService.getStudentById(studentId)).thenReturn(student);
     when(facultyService.findCoursesByFacultyNameAndPlan("Science", "2024"))
-        .thenReturn(facultyCourses);
-    when(historialService.getHistorialByStudentId(studentId))
-        .thenReturn(Arrays.asList(historial1, historial2));
-
-    Map<String, HistorialStatus> result = pemsumService.getStudentCoursesStatus(studentId);
-
-    assertNotNull(result);
-    assertEquals(1, result.size());
-    assertEquals(HistorialStatus.FINISHED, result.get("BIO101"));
-  }
-
-  @Test
-  void getStudentCoursesStatus_WithNoHistorial_ShouldReturnAllPending() {
-    String studentId = "STU013";
-    Student student = new Student();
-    student.setUserId(studentId);
-    student.setFacultyName("Engineering");
-    student.setPlan("2024");
-
-    Course course1 = new Course("MATH101", "Calculus I", 4);
-    Course course2 = new Course("PHYS101", "Physics I", 3);
-    List<Course> facultyCourses = Arrays.asList(course1, course2);
-
-    when(studentService.getStudentById(studentId)).thenReturn(student);
-    when(facultyService.findCoursesByFacultyNameAndPlan("Engineering", "2024"))
-        .thenReturn(facultyCourses);
+            .thenReturn(facultyCourses);
     when(historialService.getHistorialByStudentId(studentId)).thenReturn(List.of());
 
-    Map<String, HistorialStatus> result = pemsumService.getStudentCoursesStatus(studentId);
+    Map<String, String> result = pemsumService.getStudentCoursesStatus(studentId);
 
     assertNotNull(result);
     assertEquals(2, result.size());
-    assertEquals(HistorialStatus.PENDING, result.get("MATH101"));
-    assertEquals(HistorialStatus.PENDING, result.get("PHYS101"));
+    assertEquals("PENDING", result.get("BIO101"));
+    assertEquals("PENDING", result.get("CHEM101"));
   }
 
-  @Test
-  void getStudentCoursesStatus_WhenFacultyCoursesNotFound_ShouldThrowException() {
-    String studentId = "STU014";
-    Student student = new Student();
-    student.setUserId(studentId);
-    student.setFacultyName("Unknown");
-    student.setPlan("2024");
-
-    when(studentService.getStudentById(studentId)).thenReturn(student);
-    when(facultyService.findCoursesByFacultyNameAndPlan("Unknown", "2024")).thenReturn(List.of());
-
-    assertThrows(
-        ResourceNotFoundException.class, () -> pemsumService.getStudentCoursesStatus(studentId));
+  private Historial createHistorial(String studentId, String groupCode, HistorialStatus status) {
+    return new Historial.HistorialBuilder()
+            .studentId(studentId)
+            .groupCode(groupCode)
+            .status(status)
+            .year("2024")
+            .period("1")
+            .build();
   }
 
-  @Test
-  void getCompletedCoursesPercentage_WhenTotalCreditsZero_ShouldReturnZero() {
-    String studentId = "STU015";
-    Student student = new Student();
-    student.setUserId(studentId);
-    student.setFacultyName("EmptyFaculty");
-    student.setPlan("2024");
-
-    when(studentService.getStudentById(studentId)).thenReturn(student);
-    when(facultyService.findCoursesByFacultyNameAndPlan("EmptyFaculty", "2024"))
-        .thenReturn(List.of());
-
-    assertThrows(
-        ResourceNotFoundException.class,
-        () -> pemsumService.getCompletedCoursesPercentage(studentId));
+  private Group createGroup(String groupCode, String abbreviation) {
+    Group group = new Group();
+    group.setGroupCode(groupCode);
+    group.setAbbreviation(abbreviation);
+    return group;
   }
 }
